--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "KHAN-MD",
+  "name": "KILLER-XMD",
   "description": "Javascript WhatsApp bot made by Jᴀᴡᴀᴅ TᴇᴄʜX",
   "logo": "https://raw.githubusercontent.com/JawadYT36/KHAN-DATA/refs/heads/main/logo/dj.jpg",
   "keywords": ["KHAN-MD"],
