--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "𝕂𝕀𝕃𝕃𝔼ℝ 𝕏𝕄𝔻",
   "description": "Javascript WhatsApp bot made by 🄾🄱🄴🄳 🅃🄴🄲🄷",
-  "logo": "https://raw.githubusercontent.com/JawadYT36/KHAN-DATA/refs/heads/main/logo/dj.jpg",
+  "logo": "https://files.catbox.moe/db7508.jpg",
   "keywords": ["𝕂𝕀𝕃𝕃𝔼ℝ 𝕏𝕄𝔻"],
   "success_url": "/",
 
