--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "KHAN-MD",
+  "name": "ᏦᏆᏞᏞᎬᎡ ХᎷᎠ ",
   "version": "4.0.0",
-  "description": "A WhatsApp Bot Created By JawadTechX",
+  "description": "A WhatsApp Bot Created By 🄾🄱🄴🄳 🅃🄴🄲🄷",
   "main": "index.js",
   "scripts": {
     "start": "pm2 start index.js --deep-monitoring --attach --name KHAN-MD",
-    "stop": "pm2 stop KHAN-MD",
-    "restart": "pm2 restart KHAN-MD"
+    "stop": "pm2 stop ᏦᏆᏞᏞᎬᎡ ХᎷᎠ ",
+    "restart": "pm2 restart ᏦᏆᏞᏞᎬᎡ ХᎷᎠ "
   },
   "dependencies": {
     "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
